# GpuMonitoring

./: README.md  Run.ps1
cli/: Cargo.toml
cli/src/: main.rs
frontend/: gpu-stats.js  index.html  smoothie.js
server/: Cargo.toml
server/src/: main.rs
