[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
nvml-wrapper = "0.8.0"
actix = "0.13"
actix-cors="0.6.2"
actix-rt = "2.7.0"
actix-web = "4.1.0"
actix-web-actors = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.20.1", features = ["full"] }
